--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "file-loader": "^0.9.0"
+    "file-loader": "^0.9.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   }
 }
