--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
+    "redux-auth": "0.0.5-beta5",
     "redux-form": "^5.3.2",
     "redux-thunk": "^2.1.0"
   }
