--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
+    "redux-router": "^2.1.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
