--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
+    "jshint": "^2.9.2",
+    "jshint-loader": "^0.8.3",
     "redux-router": "^2.1.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
@@ -40,6 +43,8 @@
     "redux": "^3.5.2",
     "redux-auth": "0.0.5-beta5",
     "redux-form": "^5.3.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
