--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack-dev-server"
+    "build": "npm run clean && npm run build:webpack",
+    "start": "node server.js",
+    "tunnel": "browser-sync start --proxy localhost:8080 --tunnel wesbos"
   },
   "repository": {
     "type": "git",
@@ -26,8 +26,6 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
-    "jshint": "^2.9.2",
-    "jshint-loader": "^0.8.3",
     "redux-router": "^2.1.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
@@ -43,6 +41,7 @@
     "redux": "^3.5.2",
     "redux-auth": "0.0.5-beta5",
     "redux-form": "^5.3.2",
+    "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.1.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
