--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run clean && npm run build:webpack",
-    "start": "node server.js",
-    "tunnel": "browser-sync start --proxy localhost:8080 --tunnel wesbos"
+    "build-dev": "webpack --config webpack.config.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +30,11 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.11.6",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "react": "^15.3.0",
@@ -43,6 +47,7 @@
     "redux-form": "^5.3.2",
     "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.1.0",
+    "request": "^2.74.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
   }
