server side rending with redux-auth Immutable convert

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-register": "^6.11.6",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
+    "immutable": "^3.8.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
@@ -45,6 +46,8 @@
     "redux": "^3.5.2",
     "redux-auth": "0.0.5-beta5",
     "redux-form": "^5.3.2",
+    "redux-immutable": "^3.0.7",
+    "redux-immutablejs": "0.0.8",
     "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.1.0",
     "request": "^2.74.0",
