--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.11.6",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "immutable": "^3.8.1",
