--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux-immutable": "^3.0.7",
     "redux-immutablejs": "0.0.8",
     "redux-localstorage": "^0.4.1",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "request": "^2.74.0",
     "webpack-dev-middleware": "^1.6.1",
