--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "immutable": "^3.8.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-dropzone": "^3.5.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "react-router-redux": "^4.0.5",
