--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.11.6",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^0.23.1",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "immutable": "^3.8.1",
@@ -54,6 +55,7 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "request": "^2.74.0",
+    "style-loader": "^0.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
   }
